--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                   <a href="#" data-page="home">الرئيسية</a>
                   <a href="#" data-page="profile">الملف الشخصي</a>
                   <a href="#" data-page="instructor" id="instructor-dropdown-link" style="display: none;">لوحة المدرب</a>
-                  <a href="#" data-page="admin" id="admin-dropdown-link" style="display: none;">لوحة التحكم</a>
+                  <a href="#" data-page="admin" id="admin-link" style="display: none;">لوحة التحكم</a>
                   <a href="#" id="logout-btn">تسجيل الخروج</a>
                 </div>
               </div>
