--- a/index.html
+++ b/index.html
@@ -78,12 +78,6 @@
             <div class="nav-brand">
               <h1 id="brand-logo" style="cursor: pointer;">الأكاديمية التعليمية</h1>
             </div>
-            <div class="nav-menu">
-              <a href="#" data-page="home" class="nav-link active">الرئيسية</a>
-              <a href="#" data-page="profile" class="nav-link">الملف الشخصي</a>
-              <a href="#" data-page="instructor" id="instructor-link" class="nav-link" style="display: none;">لوحة المدرب</a>
-              <a href="#" data-page="admin" id="admin-link" class="nav-link" style="display: none;">لوحة التحكم</a>
-            </div>
             <div class="nav-actions">
               <button id="theme-toggle" class="theme-btn">
                 <i class="fas fa-moon"></i>
@@ -94,7 +88,7 @@
                   <a href="#" data-page="home">الرئيسية</a>
                   <a href="#" data-page="profile">الملف الشخصي</a>
                   <a href="#" data-page="instructor" id="instructor-dropdown-link" style="display: none;">لوحة المدرب</a>
-                  <a href="#" data-page="admin" id="admin-link" style="display: none;">لوحة التحكم</a>
+                  <a href="#" data-page="admin" id="admin-dropdown-link" style="display: none;">لوحة التحكم</a>
                   <a href="#" id="logout-btn">تسجيل الخروج</a>
                 </div>
               </div>
